--- a/src/main/resources/com/mycompany/testjavafx/formSiniestro.fxml
+++ b/src/main/resources/com/mycompany/testjavafx/formSiniestro.fxml
@@ -28,7 +28,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Numero de siniestro">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Número de siniestro">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
@@ -44,13 +44,13 @@
                </GridPane.margin>
             </Text>
             <DatePicker fx:id="dpFechaSiniestro" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Fecha de Resolucion" GridPane.rowIndex="2">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Fecha de resolución" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
             <DatePicker fx:id="dpFechaResolucion" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Descripcion" GridPane.rowIndex="3">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Descripción" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
