--- a/src/main/resources/com/mycompany/testjavafx/formCliente.fxml
+++ b/src/main/resources/com/mycompany/testjavafx/formCliente.fxml
@@ -37,7 +37,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
                   </Text>
-                  <TextField id="fieldNombre" fx:id="txtNombre" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity">
+                  <TextField id="fieldNombre" fx:id="txtNombre" alignment="TOP_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
@@ -53,7 +53,7 @@
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></Text>
-                  <TextField id="fieldApellido" fx:id="txtApellido" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="145.0">
+                  <TextField id="fieldApellido" fx:id="txtApellido" alignment="TOP_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="145.0">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></TextField>
@@ -68,7 +68,7 @@
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></Text>
-                  <TextField fx:id="txtDireccion" alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" />
+                  <TextField fx:id="txtDireccion" alignment="TOP_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" />
                </children>
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -76,11 +76,11 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Telefono">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Teléfono">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></Text>
-                  <TextField fx:id="txtTelfono" minHeight="-Infinity" minWidth="-Infinity">
+                  <TextField fx:id="txtTelfono" alignment="TOP_LEFT" minHeight="-Infinity" minWidth="-Infinity">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></TextField>
@@ -95,7 +95,7 @@
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></Text>
-                  <TextField fx:id="txtMail" minHeight="-Infinity" minWidth="-Infinity">
+                  <TextField fx:id="txtMail" alignment="TOP_LEFT" minHeight="-Infinity" minWidth="-Infinity">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></TextField>
@@ -125,7 +125,7 @@
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></Text>
-                  <TextField fx:id="txtEstudios">
+                  <TextField fx:id="txtEstudios" alignment="TOP_LEFT">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></TextField>
@@ -136,11 +136,11 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Profesion">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Profesión">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></Text>
-                  <TextField fx:id="txtProfesion">
+                  <TextField fx:id="txtProfesion" alignment="TOP_LEFT">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></TextField>
@@ -155,7 +155,7 @@
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></Text>
-                  <TextField fx:id="txtObservaciones" />
+                  <TextField fx:id="txtObservaciones" alignment="TOP_LEFT" />
                </children>
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -182,7 +182,7 @@
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></Text>
-                  <TextField fx:id="txtReferido">
+                  <TextField fx:id="txtReferido" alignment="TOP_LEFT">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></TextField>
@@ -193,7 +193,7 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Genero">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Género">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin></Text>
@@ -228,7 +228,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
                   </Text>
-                  <TextField id="fieldDNI" fx:id="txtDNI">
+                  <TextField id="fieldDNI" fx:id="txtDNI" alignment="TOP_LEFT">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
@@ -243,7 +243,7 @@
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
       </GridPane>
-      <Button layoutX="162.0" layoutY="557.0" mnemonicParsing="false" onAction="#handleCrearCliente" text="Gaurdar" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="50.0" />
+      <Button layoutX="162.0" layoutY="557.0" mnemonicParsing="false" onAction="#handleCrearCliente" text="Guardar" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="50.0" />
       <Button layoutX="419.0" layoutY="557.0" mnemonicParsing="false" onAction="#handleCancelar" text="Cancelar" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="50.0" />
    </children>
 </AnchorPane>
