--- a/src/main/resources/com/mycompany/testjavafx/formEditCliente.fxml
+++ b/src/main/resources/com/mycompany/testjavafx/formEditCliente.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="597.0" prefWidth="606.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.testjavafx.FormEditClienteController">
    <children>
-      <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nuevo cliente" wrappingWidth="79.873046875" />
+      <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Editar cliente" wrappingWidth="79.873046875" />
       <GridPane gridLinesVisible="true" layoutX="-2.0" layoutY="80.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="-2.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="80.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -76,7 +76,7 @@
             </HBox>
             <HBox GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Telefono">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Teléfono">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
@@ -90,7 +90,7 @@
             </HBox>
             <HBox GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="mail">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Mail">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
@@ -132,7 +132,7 @@
             </HBox>
             <HBox GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Profesion">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Profesión">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
@@ -184,7 +184,7 @@
             </HBox>
             <HBox GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Genero">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Género">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
@@ -229,8 +229,7 @@
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
       </GridPane>
-      <Button layoutX="162.0" layoutY="557.0" mnemonicParsing="false" onAction="#handleEditarCliente" text="Gaurdar" />
+      <Button layoutX="162.0" layoutY="557.0" mnemonicParsing="false" onAction="#handleEditarCliente" text="Guardar" />
       <Button layoutX="419.0" layoutY="557.0" mnemonicParsing="false" onAction="#handleCancelar" text="Cancelar" />
-      <TextField fx:id="txtIdCliente" editable="false" layoutX="431.0" layoutY="19.0" />
    </children>
 </AnchorPane>
