--- a/src/main/resources/com/mycompany/testjavafx/formRecibo.fxml
+++ b/src/main/resources/com/mycompany/testjavafx/formRecibo.fxml
@@ -26,7 +26,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Numero de recibo">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Número de recibo">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
@@ -36,7 +36,7 @@
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </GridPane.margin>
             </TextField>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Fecha de emision" GridPane.rowIndex="1">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Fecha de emisión" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
