--- a/src/main/resources/com/mycompany/testjavafx/login.fxml
+++ b/src/main/resources/com/mycompany/testjavafx/login.fxml
@@ -9,7 +9,7 @@
 <AnchorPane id="AnchorPane" prefHeight="242.0" prefWidth="394.0" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.testjavafx.LoginController">
 
    <children>
-      <Label layoutX="71.0" layoutY="51.0" prefHeight="17.0" prefWidth="70.0" text="Usuario" />
+      <Label layoutX="71.0" layoutY="51.0" prefHeight="17.0" prefWidth="70.0" text="Usuario:" />
       <Label layoutX="71.0" layoutY="83.0" text="Contraseña:" />
       <TextField id="usuario" fx:id="usuarioField" layoutX="186.0" layoutY="47.0" />
       <PasswordField id="pass" fx:id="contrasenaField" layoutX="186.0" layoutY="79.0" />
