--- a/src/main/resources/informes/datosCliente.jrxml
+++ b/src/main/resources/informes/datosCliente.jrxml
@@ -137,7 +137,7 @@
 	<title>
 		<band height="102" splitType="Stretch">
 			<frame>
-				<reportElement mode="Opaque" x="0" y="0" width="802" height="66" backcolor="#000000" uuid="d8d9e644-3a32-491d-97cb-a277aff17133"/>
+				<reportElement mode="Opaque" x="0" y="0" width="802" height="70" backcolor="#0509FF" uuid="d8d9e644-3a32-491d-97cb-a277aff17133"/>
 				<staticText>
 					<reportElement style="Title" x="90" y="4" width="620" height="66" uuid="27d8f6ee-f0a9-44f6-a160-1763c3b00f30"/>
 					<box topPadding="4" leftPadding="4" bottomPadding="4" rightPadding="4"/>
@@ -148,7 +148,7 @@
 				</staticText>
 			</frame>
 			<frame>
-				<reportElement mode="Opaque" x="0" y="70" width="802" height="32" forecolor="#000000" backcolor="#CC0000" uuid="b0c895f6-6dbd-477d-9858-9ad66af087e1"/>
+				<reportElement mode="Opaque" x="0" y="70" width="802" height="32" forecolor="#000000" backcolor="#8EB9FA" uuid="b0c895f6-6dbd-477d-9858-9ad66af087e1"/>
 				<textField pattern="EEEEE dd MMMMM yyyy">
 					<reportElement x="658" y="10" width="144" height="20" forecolor="#FFFFFF" uuid="a33fce3b-20c1-4696-873a-fe134d1e7d88"/>
 					<textElement textAlignment="Right">
@@ -162,170 +162,174 @@
 	<detail>
 		<band height="327" splitType="Stretch">
 			<frame>
-				<reportElement style="Row" mode="Opaque" x="0" y="0" width="802" height="18" uuid="34a2ae4b-4055-476b-8676-d499f6af510b"/>
+				<reportElement style="Row" mode="Opaque" x="0" y="0" width="802" height="327" backcolor="rgba(142, 185, 250, 0.33333334)" uuid="34a2ae4b-4055-476b-8676-d499f6af510b"/>
 				<frame>
-					<reportElement mode="Opaque" x="8" y="20" width="611" height="90" backcolor="#8CAFFF" uuid="ba31bac1-5fd8-461a-9ecb-214d7bc4387a"/>
+					<reportElement mode="Opaque" x="30" y="47" width="610" height="90" forecolor="#FFFFFF" backcolor="#FCFCFC" uuid="ba31bac1-5fd8-461a-9ecb-214d7bc4387a"/>
 					<box topPadding="2" leftPadding="2" bottomPadding="2" rightPadding="2">
-						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+						<pen lineWidth="1.0" lineStyle="Dotted"/>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
+					<textField>
+						<reportElement x="462" y="0" width="136" height="28" forecolor="#0D0101" uuid="50e81416-2676-4300-8629-c3e7ed68c109">
+							<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="99ca2c7c-693e-4793-9607-f7eec631293b"/>
+						</reportElement>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
+						<textFieldExpression><![CDATA["DNI: " + $F{DNI}]]></textFieldExpression>
+					</textField>
+					<textField>
+						<reportElement x="8" y="30" width="103" height="30" forecolor="#0D0101" uuid="154ef01e-0547-456c-8ac4-b6a58f860a59"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
+						<textFieldExpression><![CDATA["Nombre: " + $F{Nombre}]]></textFieldExpression>
+					</textField>
+					<textField>
+						<reportElement x="121" y="30" width="197" height="30" forecolor="#0D0101" uuid="be4e136d-0960-4610-b273-eddca0ee16a3"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
+						<textFieldExpression><![CDATA["Apellidos: " + $F{Apellido}]]></textFieldExpression>
+					</textField>
+					<textField>
+						<reportElement x="316" y="0" width="144" height="28" forecolor="#0D0101" uuid="c2b85e2a-15c4-4fc0-87bd-a66d2714c6f1"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
+						<textFieldExpression><![CDATA["Nacionalidad: " + $F{Nacionalidad}]]></textFieldExpression>
+					</textField>
+					<textField>
+						<reportElement x="121" y="0" width="197" height="28" forecolor="#0D0101" uuid="2c4d4669-156a-418a-9a86-34426d50947b"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
+						<textFieldExpression><![CDATA["Fecha de nacimiento: " + $F{Fec_Nacimiento}]]></textFieldExpression>
+					</textField>
+					<textField>
+						<reportElement x="462" y="30" width="136" height="30" forecolor="#0D0101" uuid="46769356-35e0-4553-84c6-82aa5d1023f6"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
+						<textFieldExpression><![CDATA["Género: " + $F{Genero}]]></textFieldExpression>
+					</textField>
+					<textField>
+						<reportElement x="318" y="30" width="144" height="30" forecolor="#0D0101" uuid="2df95e5e-f3de-4de1-ab54-75eba2b46557"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
+						<textFieldExpression><![CDATA["Teléfono: " + $F{Telefono}]]></textFieldExpression>
+					</textField>
+					<textField>
+						<reportElement x="9" y="63" width="308" height="25" forecolor="#0D0101" uuid="3310acb0-d591-4771-8178-86508a4b94ad"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
+						<textFieldExpression><![CDATA["Dirección: " + $F{Direccion}]]></textFieldExpression>
+					</textField>
+					<textField>
+						<reportElement x="317" y="63" width="281" height="25" forecolor="#0D0101" uuid="96461afc-6d77-462d-8859-e71da15566c3"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
+						<textFieldExpression><![CDATA["Correo electrónico: " + $F{Mail}]]></textFieldExpression>
+					</textField>
 				</frame>
 				<textField>
-					<reportElement x="10" y="20" width="190" height="30" uuid="aac7ee2e-fee4-4ce6-9f75-286410b0729b">
+					<reportElement x="40" y="48" width="103" height="30" forecolor="#0D0101" uuid="aac7ee2e-fee4-4ce6-9f75-286410b0729b">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="34d7acae-a7b5-411d-8d4f-78a9fb37d01e"/>
 					</reportElement>
-					<textFieldExpression><![CDATA["ID_Cliente " + $F{ID_Cliente}]]></textFieldExpression>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<textFieldExpression><![CDATA["ID Cliente: " + $F{ID_Cliente}]]></textFieldExpression>
 				</textField>
 				<frame>
-					<reportElement mode="Opaque" x="10" y="150" width="293" height="34" backcolor="#8FF9FF" uuid="b28341d3-5906-4b10-9885-fd652946a40b"/>
+					<reportElement mode="Opaque" x="280" y="172" width="283" height="112" backcolor="#58A2FC" uuid="f16da0b3-512f-451f-847d-0541a9ebe306"/>
 					<box topPadding="2" leftPadding="2" bottomPadding="2" rightPadding="2">
-						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textField>
-						<reportElement x="0" y="1" width="140" height="30" uuid="3bd10883-01f4-45da-82cb-525d3cc9ebd7"/>
-						<textFieldExpression><![CDATA["Numero de polizas: " + $F{Total_Polizas}]]></textFieldExpression>
-					</textField>
-					<textField>
-						<reportElement x="141" y="1" width="138" height="25" uuid="11d83adf-a706-4e3f-bc7b-63fcefa90e7a"/>
-						<textFieldExpression><![CDATA["Bonificacion: " + $F{Bonificacion} +"%"]]></textFieldExpression>
-					</textField>
-				</frame>
-				<frame>
-					<reportElement mode="Opaque" x="8" y="206" width="319" height="69" backcolor="#8FF9FF" uuid="f16da0b3-512f-451f-847d-0541a9ebe306"/>
-					<box topPadding="2" leftPadding="2" bottomPadding="2" rightPadding="2">
-						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					</box>
-					<textField>
-						<reportElement x="1" y="1" width="110" height="30" uuid="37d341e1-d115-464d-a705-7c41595630d8"/>
+						<reportElement x="1" y="1" width="157" height="30" forecolor="#FCFAFA" uuid="37d341e1-d115-464d-a705-7c41595630d8"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
 						<textFieldExpression><![CDATA["Estado Civil: " + $F{Estado_civil}]]></textFieldExpression>
 					</textField>
 					<textField>
-						<reportElement x="1" y="31" width="110" height="30" uuid="b1a40912-7906-413a-a1c5-05a22f08e3f6"/>
+						<reportElement x="1" y="37" width="157" height="30" forecolor="#FCFAFA" uuid="b1a40912-7906-413a-a1c5-05a22f08e3f6"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
 						<textFieldExpression><![CDATA["Estudios: " + $F{Estudios}]]></textFieldExpression>
 					</textField>
 					<textField>
-						<reportElement x="121" y="1" width="160" height="30" uuid="788e88c0-53ad-47d7-ad00-e8254c82be7a"/>
+						<reportElement x="164" y="1" width="114" height="33" forecolor="#FCFAFA" uuid="788e88c0-53ad-47d7-ad00-e8254c82be7a"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
 						<textFieldExpression><![CDATA["Parientes: " + $F{Num_Parientes}]]></textFieldExpression>
 					</textField>
 					<textField>
-						<reportElement x="121" y="31" width="160" height="30" uuid="054d7a08-2128-4617-a209-2220d255ac11"/>
-						<textFieldExpression><![CDATA["Profesion: " + $F{Profesion}]]></textFieldExpression>
+						<reportElement x="165" y="37" width="113" height="30" forecolor="#FCFAFA" uuid="054d7a08-2128-4617-a209-2220d255ac11"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
+						<textFieldExpression><![CDATA["Profesión: " + $F{Profesion}]]></textFieldExpression>
+					</textField>
+					<textField>
+						<reportElement x="4" y="72" width="154" height="30" forecolor="#FCFAFA" uuid="3bd10883-01f4-45da-82cb-525d3cc9ebd7"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
+						<textFieldExpression><![CDATA["Número de pólizas: " + $F{Total_Polizas}]]></textFieldExpression>
+					</textField>
+					<textField>
+						<reportElement x="164" y="74" width="114" height="25" forecolor="#FCFAFA" uuid="11d83adf-a706-4e3f-bc7b-63fcefa90e7a"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
+						<textFieldExpression><![CDATA["Bonificación: " + $F{Bonificacion} +"%"]]></textFieldExpression>
 					</textField>
 				</frame>
 				<frame>
-					<reportElement mode="Opaque" x="660" y="18" width="139" height="94" backcolor="#8FF9FF" uuid="2a27cbd0-943e-4d6e-bd58-e53aad1ea306"/>
+					<reportElement mode="Opaque" x="650" y="47" width="122" height="90" backcolor="rgba(255, 255, 255, 0.6862745)" uuid="2a27cbd0-943e-4d6e-bd58-e53aad1ea306"/>
 					<box topPadding="2" leftPadding="2" bottomPadding="2" rightPadding="2">
-						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textField>
-						<reportElement x="0" y="3" width="121" height="30" uuid="71a59afb-cfab-45da-8d35-f74b172b7e9f"/>
+						<reportElement x="13" y="3" width="97" height="51" forecolor="#0A0A0A" uuid="71a59afb-cfab-45da-8d35-f74b172b7e9f"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
 						<textFieldExpression><![CDATA["Fecha de registro: " + $F{Fecha_Registro}]]></textFieldExpression>
 					</textField>
 					<textField>
-						<reportElement x="0" y="33" width="121" height="30" uuid="d0550f89-95ca-4438-925c-ed201c892fa9"/>
+						<reportElement x="13" y="57" width="97" height="27" forecolor="#0F0E0E" uuid="d0550f89-95ca-4438-925c-ed201c892fa9"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
 						<textFieldExpression><![CDATA["Baja: " + $F{Fecha_Baja}]]></textFieldExpression>
 					</textField>
 				</frame>
 				<frame>
-					<reportElement mode="Opaque" x="380" y="150" width="210" height="130" backcolor="#8FF9FF" uuid="c3ef459d-bedd-4c1c-854d-a4f1d2a8c21e"/>
+					<reportElement mode="Opaque" x="600" y="172" width="130" height="112" backcolor="#58A2FC" uuid="c3ef459d-bedd-4c1c-854d-a4f1d2a8c21e"/>
 					<box topPadding="2" leftPadding="2" bottomPadding="2" rightPadding="2">
-						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textField>
-						<reportElement x="13" y="19" width="187" height="90" uuid="32737937-15c4-4dce-9421-c5e7180996bb"/>
+						<reportElement x="18" y="7" width="90" height="91" forecolor="#FCFCFC" uuid="32737937-15c4-4dce-9421-c5e7180996bb"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
 						<textFieldExpression><![CDATA["Observaciones: " + $F{Observaciones}]]></textFieldExpression>
 					</textField>
 				</frame>
 				<frame>
-					<reportElement mode="Opaque" x="657" y="150" width="143" height="109" backcolor="#8FF9FF" uuid="2f209add-02f8-48fe-b858-6b99dc94d2d9"/>
+					<reportElement mode="Opaque" x="64" y="172" width="177" height="112" backcolor="#58A2FC" uuid="2f209add-02f8-48fe-b858-6b99dc94d2d9"/>
 					<box topPadding="2" leftPadding="2" bottomPadding="2" rightPadding="2">
-						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-						<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textField>
-						<reportElement x="1" y="1" width="120" height="30" uuid="93a95fad-219b-43de-9b10-642fb6a6d9f3"/>
+						<reportElement x="38" y="1" width="100" height="47" forecolor="#FCFAFA" uuid="93a95fad-219b-43de-9b10-642fb6a6d9f3"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
 						<textFieldExpression><![CDATA["Ingresos anuales: " + $F{Ingresos_Anuales}]]></textFieldExpression>
 					</textField>
 					<textField>
-						<reportElement x="1" y="31" width="121" height="30" uuid="bef392bb-f442-4aab-aa00-2668b780bc40"/>
+						<reportElement x="38" y="48" width="100" height="34" forecolor="#FCFAFA" uuid="bef392bb-f442-4aab-aa00-2668b780bc40"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
 						<textFieldExpression><![CDATA["Referido: " + $F{Referido}]]></textFieldExpression>
 					</textField>
 					<textField>
-						<reportElement x="1" y="61" width="120" height="30" uuid="d78fc09d-ff48-4366-91da-be29dcee6c0e"/>
+						<reportElement x="38" y="82" width="100" height="28" forecolor="#FCFAFA" uuid="d78fc09d-ff48-4366-91da-be29dcee6c0e"/>
+						<textElement textAlignment="Center" verticalAlignment="Middle"/>
 						<textFieldExpression><![CDATA["VIP: " + $F{Vip}]]></textFieldExpression>
 					</textField>
 				</frame>
 			</frame>
-			<textField>
-				<reportElement x="200" y="20" width="160" height="30" uuid="50e81416-2676-4300-8629-c3e7ed68c109">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="99ca2c7c-693e-4793-9607-f7eec631293b"/>
-				</reportElement>
-				<textFieldExpression><![CDATA["DNI: " + $F{DNI}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="9" y="50" width="141" height="30" uuid="154ef01e-0547-456c-8ac4-b6a58f860a59"/>
-				<textFieldExpression><![CDATA["Nombre: " + $F{Nombre}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="150" y="50" width="130" height="30" uuid="be4e136d-0960-4610-b273-eddca0ee16a3"/>
-				<textFieldExpression><![CDATA["Apellido: " + $F{Apellido}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="10" y="80" width="270" height="30" uuid="3310acb0-d591-4771-8178-86508a4b94ad"/>
-				<textFieldExpression><![CDATA["Direccion: " + $F{Direccion}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="280" y="80" width="120" height="30" uuid="2df95e5e-f3de-4de1-ab54-75eba2b46557"/>
-				<textFieldExpression><![CDATA["Telefono: " + $F{Telefono}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="400" y="80" width="220" height="30" uuid="96461afc-6d77-462d-8859-e71da15566c3"/>
-				<textFieldExpression><![CDATA["Correo electronico: " + $F{Mail}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="400" y="50" width="120" height="30" uuid="2c4d4669-156a-418a-9a86-34426d50947b"/>
-				<textFieldExpression><![CDATA["Fecha de nacimiento: " + $F{Fec_Nacimiento}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="520" y="50" width="100" height="30" uuid="46769356-35e0-4553-84c6-82aa5d1023f6"/>
-				<textFieldExpression><![CDATA["Genero: " + $F{Genero}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="280" y="50" width="120" height="30" uuid="c2b85e2a-15c4-4fc0-87bd-a66d2714c6f1"/>
-				<textFieldExpression><![CDATA["Nacionalidad: " + $F{Nacionalidad}]]></textFieldExpression>
-			</textField>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="28" splitType="Stretch">
-			<line>
-				<reportElement positionType="FixRelativeToBottom" x="0" y="0" width="801" height="3" uuid="501ac6c4-e9d4-43cb-ba6b-7f2f44394cf3"/>
-				<graphicElement>
-					<pen lineWidth="0.5" lineColor="#999999"/>
-				</graphicElement>
-			</line>
-		</band>
-	</columnFooter>
 	<pageFooter>
 		<band height="25" splitType="Stretch">
 			<frame>
-				<reportElement mode="Opaque" x="0" y="0" width="802" height="25" forecolor="#D0B48E" backcolor="#000000" uuid="ffb10ec8-0371-4545-8eaa-96d62ad3cec0"/>
+				<reportElement mode="Opaque" x="0" y="0" width="802" height="25" forecolor="#D0B48E" backcolor="#0509FF" uuid="ffb10ec8-0371-4545-8eaa-96d62ad3cec0"/>
 				<textField evaluationTime="Report">
 					<reportElement style="Column header" x="757" y="3" width="40" height="20" forecolor="#FFFFFF" uuid="b5521ea6-5f36-4864-856f-58d0bcd011f2"/>
 					<textElement verticalAlignment="Middle">
